--- a/css/events.css
+++ b/css/events.css
@@ -99,11 +99,11 @@ h1 {
 @media screen and (max-width: 900px){
 
 .introContainer, .mapContainer, .privateContainer {
-    padding: 3rem 2rem;
+    padding: 2.5rem 1.5rem;
 }
 
 .introContainer h1, .mapContainer h1, .privateContainer h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     line-height: 1;
 }
 
