--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -29,7 +29,7 @@ h1 {
 @media screen and (max-width: 900px){
 
 .mainContainer {
-    margin: 3rem 2rem;
+    margin: 2.5rem 1.5rem;
 }
 
 .mainContainer h1 {
