--- a/css/produits.css
+++ b/css/produits.css
@@ -111,7 +111,7 @@ body {
 }
 
 .introContainer {
-    padding: 3rem 2rem;
+    padding: 2.5rem 1.5rem;
 }
 
 .introContainer img {
